# racing

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  buildall  main_ap.cpp  main_game.cpp  main_rl.cpp  plot.py  requirements.txt  track_labels.json
dependencies/: mdspan.hpp
game/: car.cpp  car.h  common.h  maps.cpp  maps.h  race.cpp  race.h  track.cpp  track.h
render/: car.cpp  car.h  common.h  drift.cpp  drift.h  game_main.cpp  hud.cpp  hud.h  track.cpp  track.h
rl/: ag.h  core.h  env.cpp  env.h  mutate.h  nn.h  optim.h  params.h  utils.h
utils/: generate_index.py  process.py
validation/: CMakeLists.txt
validation/benchmark/: autograd.cpp  matmul.cpp  train.cpp
validation/test/: main.cpp  test_matmul.cpp  test_train.cpp
